--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -5,7 +5,7 @@ section {
         align-items: center;
         justify-content: center;
         background: #000 url(../../src/img/pexels-photo-4110882.jpeg) center no-repeat;
-        background-size: 100vw auto;
+        background-size: 100% auto;
         background-attachment: fixed;
 
         @include media-breakpoint-up("992px") {
