--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1865,6 +1865,7 @@ header.header .container .menu-wrapper #menu-toggle:checked ~ .menu-container {
   min-height: calc(100vh - 100px);
   opacity: 1;
   pointer-events: initial;
+  transition: all ease-in 0.3s;
 }
 header.header .container .menu-wrapper #menu-toggle:checked ~ .menu-btn > .line:nth-child(2) {
   opacity: 0;
@@ -1918,7 +1919,6 @@ header.header .container .menu-wrapper .menu-container {
   width: 100%;
   padding: 30px 25px;
   background: #fff;
-  transition: all ease-in 0.3s;
   font-size: 20px;
 }
 header.header .container .menu-wrapper .menu-container li a {
@@ -2204,7 +2204,11 @@ section.banner-hero {
   justify-content: center;
   background: #000 url(../../src/img/pexels-photo-4110882.jpeg) center no-repeat;
   background-size: 100% auto;
-  background-attachment: fixed;
+}
+@media screen and (min-width: 992px) {
+  section.banner-hero {
+    background-attachment: fixed;
+  }
 }
 @media screen and (min-width: 992px) {
   section.banner-hero {
