--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -6,7 +6,30 @@ section {
         justify-content: center;
         background: #000 url(../../src/img/pexels-photo-4110882.jpeg) center no-repeat;
         background-size: 100% auto;
-        background-attachment: fixed;
+        // background-attachment: fixed;
+        // position: relative;
+        // z-index: 0;
+        // .bg-img {
+        //     display: none;
+        // }
+
+        @include media-breakpoint-up("992px"){
+            background-attachment: fixed;
+        }
+
+        // @include media-breakpoint-down("992px") {
+        //     .bg-img {
+        //         display: block;
+        //         position: absolute;
+        //         z-index: -1;
+        //         left: 0;
+        //         top: 0;
+        //         width: 100%;
+        //         height: 100%;
+        //         object-fit: cover;
+        //         object-position: center;
+        //     }
+        // }
 
         @include media-breakpoint-up("992px") {
             height: 100vh;
